--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.469.0",
     "next": "15.4.7",
     "react": "^19.0.0",
