--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@solana/spl-memo": "^0.2.5",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@vercel/analytics": "^1.4.1",
@@ -23,7 +25,9 @@
     "cookies-next": "^5.0.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.469.0",
+    "merkletreejs": "^0.6.0",
     "next": "15.4.7",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
