--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -24,19 +24,25 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
     "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.469.0",
     "merkletreejs": "^0.6.0",
     "next": "15.4.7",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
+    "supercluster": "^8.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet.heat": "^0.2.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
