--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -27,12 +27,14 @@
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.469.0",
+    "mapbox-gl": "^3.16.0",
     "merkletreejs": "^0.6.0",
     "next": "15.4.7",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.1.0",
     "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
     "supercluster": "^8.0.1",
@@ -43,6 +45,7 @@
     "@eslint/eslintrc": "^3",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet.heat": "^0.2.5",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
