--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.15",
     "@solana/spl-memo": "^0.2.5",
     "@solana/web3.js": "^1.98.4",
     "@supabase/ssr": "^0.5.2",
